unpackaged/main/default/objects/PagesApi__Site__c/PagesApi__Site__c.object-meta.xml
<CustomObject>
    <description>Sites are a collection of Pages published and hosted natively on the Force.com platform.</description>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>