unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Authorization_Required_Description__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Authorization_Required_Description__c</fullName>
    <description>Description for the authorization required page of the site</description>
    <inlineHelpText>Description for the authorization required page of the site</inlineHelpText>
    <label>Authorization Required Description</label>
    <length>2048</length>
    <type>Html</type>
</CustomField>