unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Authorization_Required_Title__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Authorization_Required_Title__c</fullName>
    <description>Title for the authorization required page of the site</description>
    <inlineHelpText>Title for the authorization required page of the site</inlineHelpText>
    <label>Authorization Required Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>