unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Default_Event_Listing_Style__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Default_Event_Listing_Style__c</fullName>
    <description>Dictates which event listing style is presented by default within the Events page.</description>
    <inlineHelpText>Dictates which event listing style is presented by default within the Events page.</inlineHelpText>
    <label>Default Event Listing Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Tile</label>
            </value>
            <value>
                <fullName>List</fullName>
                <color>#78C953</color>
                <label>List</label>
            </value>
            <value>
                <fullName>Calendar</fullName>
                <color>#E27001</color>
                <label>Calendar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>