unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Generic_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Generic_Error_Description__c</fullName>
    <description>Description for the generic error page of the site</description>
    <inlineHelpText>Description for the generic error page of the site</inlineHelpText>
    <label>Generic Error Description</label>
    <length>2048</length>
    <type>Html</type>
</CustomField>