unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Generic_Error_Title__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Generic_Error_Title__c</fullName>
    <description>Title for the generic error page of the site</description>
    <inlineHelpText>Title for the generic error page of the site</inlineHelpText>
    <label>Generic Error Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>