unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Limit_Exceeded_Description__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Limit_Exceeded_Description__c</fullName>
    <description>Description for the limit exceeded page of the site.</description>
    <inlineHelpText>Description for the limit exceeded page of the site.</inlineHelpText>
    <label>Limit Exceeded Description</label>
    <length>2048</length>
    <type>Html</type>
</CustomField>