unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Limit_Exceeded_Title__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Limit_Exceeded_Title__c</fullName>
    <description>Title for the limit exceeded page of the site.</description>
    <inlineHelpText>Title for the limit exceeded page of the site</inlineHelpText>
    <label>Limit Exceeded Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>