unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Maintenance_Description__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Maintenance_Description__c</fullName>
    <description>Description for the maintainence page of the site</description>
    <inlineHelpText>Description for the maintainence page of the site</inlineHelpText>
    <label>Maintenance Description</label>
    <length>2048</length>
    <type>Html</type>
</CustomField>