unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Maintenance_Title__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Maintenance_Title__c</fullName>
    <description>Title for the maintainence page of the site</description>
    <inlineHelpText>Title for the maintainence page of the site</inlineHelpText>
    <label>Maintenance Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>