unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Page_Not_Found_Description__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Page_Not_Found_Description__c</fullName>
    <description>Description for the page not found page of the site</description>
    <inlineHelpText>Description for the page not found page of the site</inlineHelpText>
    <label>Page Not Found Description</label>
    <length>2048</length>
    <type>Html</type>
</CustomField>