unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Page_Not_Found_Title__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Page_Not_Found_Title__c</fullName>
    <description>Title for the page not found page of the site</description>
    <inlineHelpText>Title for the page not found page of the site</inlineHelpText>
    <label>Page Not Found Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>