unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Profile_Contact_Fieldset_CSV__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Profile_Contact_Fieldset_CSV__c</fullName>
    <inlineHelpText>Comma separated field set names that will be displayed on the profile page.</inlineHelpText>
    <label>Profile Contact Fieldset(s) CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>