unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Service_Not_Available_Description__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Service_Not_Available_Description__c</fullName>
    <description>Description for the Service Not Available page of the site</description>
    <inlineHelpText>Description for the Service Not Available page of the site</inlineHelpText>
    <label>Service Not Available Description</label>
    <length>2048</length>
    <type>Html</type>
</CustomField>