unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__Service_Not_Available_title__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Service_Not_Available_title__c</fullName>
    <description>Title for the Service Not Available page of the site</description>
    <inlineHelpText>Title for the Service Not Available page of the site</inlineHelpText>
    <label>Service Not Available title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>