unpackaged/main/default/objects/PagesApi__Site__c/fields/CPBase__User_Info_Contact_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>CPBase__User_Info_Contact_Field_Set__c</fullName>
    <inlineHelpText>A single field set that will show information about a User in the system.</inlineHelpText>
    <label>User Info Contact Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>