unpackaged/main/default/objects/PagesApi__Site__c/fields/OrderApi__Enable_eStore__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_eStore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** Checked when the Site is linked to a Store.</description>
    <inlineHelpText>** System Calculated ** Checked when the Site is linked to a Store.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>