unpackaged/main/default/objects/PagesApi__Site__c/fields/OrderApi__Store__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Related Store.</description>
    <inlineHelpText>Link to the Related Store.</inlineHelpText>
    <label>Store</label>
    <referenceTo>OrderApi__Store__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>