unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Auth_Provider_Default_Account__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Auth_Provider_Default_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default account to use for Auth Provider</description>
    <inlineHelpText>The default account to use for Auth Provider</inlineHelpText>
    <label>Auth Provider Default Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>