unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Base_Title_Tag__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Base_Title_Tag__c</fullName>
    <description>** System Calculated Required Override ** The Base Title Tag is used as a prefix or suffix to all child Page &quot;Title Tags&quot;. For example : &quot;My Custom Page &lt; My Base Title Tag&quot;. Defaults to the name of the Site.</description>
    <inlineHelpText>** System Calculated Required Override ** The Base Title Tag is used as a prefix or suffix to all child Page &quot;Title Tags&quot;. For example : &quot;My Custom Page &lt; My Base Title Tag&quot;. Defaults to the name of the Site.</inlineHelpText>
    <label>Base Title Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>