unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Community_Network_ID__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Community_Network_ID__c</fullName>
    <inlineHelpText>Community Network Id that uniquely identifies Community</inlineHelpText>
    <label>Community Network ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>