unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Community_Network_Name__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Community_Network_Name__c</fullName>
    <inlineHelpText>Community Network Name that uniquely identifies Community</inlineHelpText>
    <label>Community Network Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>