unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Create_Account_Override_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Create_Account_Override_URL__c</fullName>
    <description>Providing a URL will hide the &quot;Create a user account&quot; checkbox on the authentication page and display the provided URL link in its place.</description>
    <inlineHelpText>Providing a URL will hide the &quot;Create a user account&quot; checkbox on the authentication page and display the provided URL link in its place.</inlineHelpText>
    <label>Create Account Override URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>