unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Default_Community_New_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Default_Community_New_User_Profile__c</fullName>
    <inlineHelpText>Default Community New User Profile</inlineHelpText>
    <label>Default Community New User Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>