unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Enable_SEF_URLs__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Enable_SEF_URLs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reserved for Future Use</description>
    <inlineHelpText>Reserved for Future Use</inlineHelpText>
    <label>Reserved for Future Use</label>
    <type>Checkbox</type>
</CustomField>