unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Group_Search_Default_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Search_Default_Sort_Field__c</fullName>
    <defaultValue>&quot;NAME&quot;</defaultValue>
    <description>** Defaults Group Name ** Combined with the Search Results Sort Order, this field defines the field to sort group search results in ascending or descending order. Limited to Group Fields Only.</description>
    <inlineHelpText>** Defaults Group Name ** Combined with the Search Results Sort Order, this field defines the field to sort group search results in ascending or descending order. Limited to Group Fields Only.</inlineHelpText>
    <label>Group Search Default Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>