unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Group_Search_Filters_CSV__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Search_Filters_CSV__c</fullName>
    <description>This field references the field set that defines the attributes that a user can use to filter search results.</description>
    <inlineHelpText>This field references the field set that defines the attributes that a user can use to filter search results.</inlineHelpText>
    <label>Group Search Filters (CSV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>