unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Group_Search_Page_Results__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Search_Page_Results__c</fullName>
    <defaultValue>10</defaultValue>
    <description>** Default 10 ** The value in this field defines the maximum number of results that will be returned for search results on the Groups page.</description>
    <inlineHelpText>** Default 10 ** The value in this field defines the maximum number of results that will be returned for search results on the Groups page.</inlineHelpText>
    <label>Group Search Page Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>