unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Group_Search_Result_Display_Fields_CSV__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Search_Result_Display_Fields_CSV__c</fullName>
    <description>Defines the fields to be displayed on the group tiles in the Groups page using comma separated values of field API names. Limited to Community Group fields only.</description>
    <inlineHelpText>Defines the fields to be displayed on the group tiles in the Groups page using comma separated values of field API names. Limited to Community Group fields only.</inlineHelpText>
    <label>Group Search Result Display Fields (CSV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>