unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Group_Search_Results_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Group_Search_Results_Sort_Order__c</fullName>
    <description>** Defaults Ascending ** Combined with the Search Results Sort Field, this field defines the order in which the search results will be displayed.</description>
    <inlineHelpText>** Defaults Ascending ** Combined with the Search Results Sort Field, this field defines the order in which the search results will be displayed.</inlineHelpText>
    <label>Group Search Results Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>