unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default site for a given community. Only one site can be default for a community.</description>
    <inlineHelpText>The default site for a given community. Only one site can be default for a community.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>