unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Site will be published and made available to the appropriate audience. Defaults unchecked.</description>
    <inlineHelpText>When checked, the Site will be published and made available to the appropriate audience. Defaults unchecked.</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>