unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Login_Override_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Login_Override_URL__c</fullName>
    <description>Portal users will be redirected to the provided URL when the &quot;Login&quot; button is clicked on the authentication page.</description>
    <inlineHelpText>Portal users will be redirected to the provided URL when the &quot;Login&quot; button is clicked on the authentication page.</inlineHelpText>
    <label>Login Override URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>