unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Login_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Login_Redirect_URL__c</fullName>
    <inlineHelpText>Relative URL to be redirected on successful login</inlineHelpText>
    <label>Login Redirect URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>