unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Menu__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Menu to use for the Site&#39;s &quot;Primary&quot; Navigation.</description>
    <inlineHelpText>Link to the Menu to use for the Site&#39;s &quot;Primary&quot; Navigation.</inlineHelpText>
    <label>Nav Menu</label>
    <referenceTo>PagesApi__Menu__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>