unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__No_Archive__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__No_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Archive</label>
    <type>Checkbox</type>
</CustomField>