unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__No_Index__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__No_Index__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Index</label>
    <type>Checkbox</type>
</CustomField>