unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Profile_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Profile_Page_URL__c</fullName>
    <inlineHelpText>The URL for the profile page.</inlineHelpText>
    <label>Profile Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>