unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__SEF_Slug__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__SEF_Slug__c</fullName>
    <description>Reserved for Future Use</description>
    <inlineHelpText>Reserved for Future Use</inlineHelpText>
    <label>Reserved for Future Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>