unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Show_Group_Search_Filters__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Show_Group_Search_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**  Default Unchecked ** This field enables or disables the filters in the Groups page.</description>
    <inlineHelpText>**  Default Unchecked ** This field enables or disables the filters in the Groups page.</inlineHelpText>
    <label>Show Group Search Filters</label>
    <type>Checkbox</type>
</CustomField>