unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Site_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Site_Template_Key__c</fullName>
    <description>The name of the template to use for creating standard pages and menus related to the site.</description>
    <inlineHelpText>The name of the template to use for creating standard pages and menus related to the site.</inlineHelpText>
    <label>Site Template Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>