unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Site_URL__c</fullName>
    <description>The base URL for the Site.</description>
    <inlineHelpText>The base URL for the Site.</inlineHelpText>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>