unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Theme__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** The Theme to use for the branding and style of pages contained in the Site.</description>
    <inlineHelpText>** Required ** The Theme to use for the branding and style of pages contained in the Site.</inlineHelpText>
    <label>Theme</label>
    <referenceTo>PagesApi__Theme__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>