unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Title_Tag_Separator__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Title_Tag_Separator__c</fullName>
    <description>Optional character to use to separate the Base Title Tag from the Page Title Tag. In the example below the &quot;&lt;&quot; character is used as the Title Tag Separator. Defaults to &quot;|&quot;

&quot;My Custom Page Title Tag &lt; My Base Title Tag&quot;</description>
    <inlineHelpText>Optional character to use to separate the Base Title Tag from the Page Title Tag. In the example below the &quot;&lt;&quot; character is used as the Title Tag Separator. Defaults to &quot;|&quot;

&quot;My Custom Page Title Tag &lt; My Base Title Tag&quot;</inlineHelpText>
    <label>Title Tag Separator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>