unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__Twitter_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Twitter_Login_URL__c</fullName>
    <description>Login URL from Auth Provider in Setup</description>
    <inlineHelpText>Login URL from Auth Provider in Setup</inlineHelpText>
    <label>Twitter Login URL</label>
    <type>Url</type>
</CustomField>