unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__User_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__User_Login_URL__c</fullName>
    <description>The URL for the login page.</description>
    <inlineHelpText>The URL for the login page.</inlineHelpText>
    <label>User Login URL</label>
    <type>Url</type>
</CustomField>