unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__User_Reset_Password_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__User_Reset_Password_URL__c</fullName>
    <description>The URL for the reset password page.</description>
    <inlineHelpText>The URL for the reset password page.</inlineHelpText>
    <label>User Reset Password URL</label>
    <type>Url</type>
</CustomField>