unpackaged/main/default/objects/PagesApi__Site__c/fields/PagesApi__User_Self_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__User_Self_Registration_URL__c</fullName>
    <description>The URL for the self registration page.</description>
    <inlineHelpText>The URL for the self registration page.</inlineHelpText>
    <label>User Self Registration URL</label>
    <type>Url</type>
</CustomField>