unpackaged/main/default/objects/PagesApi__Site__c/listViews/PagesApi__All.listView-meta.xml
<ListView>
    <fullName>PagesApi__All</fullName>
    <columns>NAME</columns>
    <columns>PagesApi__Theme__c</columns>
    <columns>PagesApi__Is_Default__c</columns>
    <columns>PagesApi__Is_Published__c</columns>
    <columns>PagesApi__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>